--- a/app/dockerfile
+++ b/app/dockerfile
@@ -4,6 +4,7 @@ WORKDIR /app
 
 COPY . .
 
-RUN pip install -r requirements.txt
+RUN pip install --no-cache-dir -r requirements.txt
 
-CMD ["python3", "manage.py", "startserver", "0.0.0.0:5000"]
+# Apply model changes to the database before starting the server
+CMD ["sh", "-c", "python3 manage.py makemigrations && python3 manage.py migrate && python3 manage.py startserver 0.0.0.0:5000"]
