Remove port specification in CMD

--- a/app/dockerfile
+++ b/app/dockerfile
@@ -14,4 +14,4 @@ COPY --from=builder /install /usr/local
 
 COPY . .
 
-CMD ["sh", "-c", "python3 manage.py makemigrations && python3 manage.py migrate && python3 manage.py startserver 0.0.0.0:5000"]
+CMD ["sh", "-c", "python3 manage.py makemigrations && python3 manage.py migrate && python3 manage.py startserver"]
