--- a/.github/workflows/DockerBuild&Deploy.yml
+++ b/.github/workflows/DockerBuild&Deploy.yml
@@ -1,12 +1,12 @@
 name: Docker Build & Deploy
 
-# on:
-#   workflow_dispatch:
-
 on:
-    push:
-        branches:
-            - aws-secretsmanager
+  workflow_dispatch:
+
+# on:
+#     push:
+#         branches:
+#             - aws-secretsmanager
 
 
 jobs:
