--- a/.github/workflows/TerraformApply.yml
+++ b/.github/workflows/TerraformApply.yml
@@ -75,3 +75,10 @@ jobs:
             - name: Terraform Apply
               run: terraform plan
 #              run: terraform apply -auto-approve
+
+            - name: Confirm tfvars file exists
+              run: |
+                echo "Listing files in terraform/"
+                ls -l
+                echo "Showing contents of terraform.tfvars"
+                cat terraform.tfvars
