--- a/.github/workflows/DockerBuild&Deploy.yml
+++ b/.github/workflows/DockerBuild&Deploy.yml
@@ -49,7 +49,7 @@ jobs:
             - name: Trivy Scan
               uses: aquasecurity/trivy-action@master
               with:
-                image-ref: ${{ secrets.AWS_REGISTRY }}/journal-app:latest
+                image-ref: journal-app:latest
                 severity: 'CRITICAL,HIGH'
                 format: 'sarif'
                 output: 'trivy-results-Docker.sarif'
