--- a/app/dockerfile
+++ b/app/dockerfile
@@ -6,7 +6,7 @@ COPY requirements.txt .
 
 RUN pip install --upgrade pip && pip install --prefix=/install --no-cache-dir -r requirements.txt
 
-FROM gcr.io/distroless/python3
+FROM python:3.8-slim
 
 WORKDIR /app
 
