--- a/app/dockerfile
+++ b/app/dockerfile
@@ -18,6 +18,6 @@ COPY . .
 
 RUN chown -R dockeruser .
 
-USER appuser
+USER dockeruser
 
 CMD ["sh", "-c", "python3 manage.py makemigrations && python3 manage.py migrate && python3 manage.py startserver 0.0.0.0:5000"]
