Post presentation work merge (#2)
* update cicd include encryption & state locking

* settings.py organisation

* diagram update and readme.md update

* dockerfile multistage to alpine

* dockerfile multistage to distroless

* dockerfile revert back to slim

* readme numbering update

* readme name update

* readme minor update

* update cicd workflow, cosmetic

* name update

* setting dockerfile to non-root user

* setting dockerfile to non-root user - correcting miss spelt name

* setting dockerfile to non-root user - tody up

* debug turn off

--- a/app/dockerfile
+++ b/app/dockerfile
@@ -1,3 +1,5 @@
+# Stage 1
+
 FROM python:3.8-slim AS builder
 
 WORKDIR /install
@@ -6,6 +8,9 @@ COPY requirements.txt .
 
 RUN pip install --upgrade pip && pip install --prefix=/install --no-cache-dir -r requirements.txt
 
+
+# Stage 2
+
 FROM python:3.8-slim
 
 WORKDIR /app
@@ -13,5 +18,11 @@ WORKDIR /app
 COPY --from=builder /install /usr/local
 
 COPY . .
+
+RUN useradd dockeruser
+
+RUN chown -R dockeruser .
+
+USER dockeruser
 
 CMD ["sh", "-c", "python3 manage.py makemigrations && python3 manage.py migrate && python3 manage.py startserver 0.0.0.0:5000"]
