--- a/app/dockerfile
+++ b/app/dockerfile
@@ -25,4 +25,4 @@ RUN chown -R dockeruser .
 
 USER dockeruser
 
-CMD ["sh", "-c", "python3 manage.py makemigrations && python3 manage.py migrate && python3 manage.py startserver 0.0.0.0:5000"]
+CMD ["sh", "-c", "python3 manage.py makemigrations && python3 manage.py migrate && python3 manage.py collectstatic --noinput && python3 manage.py startserver 0.0.0.0:5000"]
