--- a/app/dockerfile
+++ b/app/dockerfile
@@ -19,6 +19,8 @@ COPY --from=builder /install /usr/local
 
 COPY . .
 
+RUN mkdir -p /app/staticfiles && chmod -R 755 /app/staticfiles
+
 RUN useradd dockeruser
 
 RUN chown -R dockeruser .
